@@ -37,7 +37,6 @@ class QAction;
 class QWidget;
 
 
-class KTitleWidget;
 class KSelectAction;
 class KToggleAction;
 #include <kxmlguiwindow.h>
@@ -143,7 +142,6 @@ class KBBMainWindow : public KXmlGuiWindow
 		int m_ballNumber;
 		QWidget* m_centralWidget;
 		int m_columns;
-		KTitleWidget* m_infoScore;
 		KBBInfoWidget* m_infoWidget;
 		int m_rows;
 		bool m_running;
